crates/shell/src/parser/program/tests/snapshots/omp_shell_engine__parser__program__tests__complex__parse_coprocess.snap
---
source: brush-parser/src/parser/tests/complex.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "coproc cat",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(Coprocess(CoprocessCommand(
                body: Simple(SimpleCommand(
                  word_or_name: Some(Word(
                    value: "cat",
                    loc: "[location]",
                  )),
                )),
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
